[MediaRouter] Update JoinRoute behavior to allow non-local routes.

Change https://codereview.chromium.org/1911183002 rejects JoinRoute requests when there are no local routes.  This breaks certain use cases for Cast.

This relaxes the check to forward requests to the MRPM when there is any route (local or non-local).

Long term, individual routes should be marked joinable or non-joinable so the optimization can be made precise.

BUG=610797

Review-Url: https://codereview.chromium.org/1971893002
Cr-Commit-Position: refs/heads/master@{#393330}

Former-commit-id: 0ae252e8c2280bacd2d75c280dc0440f97277e37